# ollama_chatbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
app/: main.py
app/agentic_workflow/: README.md  crew_ai_poc_ask_cursor.py  crew_ai_poc_ask_gemini2_5_pro.py  crew_ai_poc_ask_gpt.py  test_gemini_credential.py
app/agentic_workflow/crewai_gemini/src/crewai_gemini/: crew_ai_poc_ask_gemini2_5_pro.py  crew_ai_poc_ask_gemini2_5_pro_decorator.py
app/agentic_workflow/crewai_gemini/src/crewai_gemini/config/: agents.yaml  tasks.yaml
app/agentic_workflow/crewai_ollama_native/src/crewai_ollama_native/: crew.py  main.py
app/agentic_workflow/crewai_ollama_native/src/crewai_ollama_native/config/: agents_langchain_wrapper.py  agents_ollama.py  tasks.yaml
app/agentic_workflow/experiment/: crew_ai_poc_ask_cursor.py
app/research/test_gemini_agent/: README.md  pyproject.toml
app/research/test_gemini_agent/src/test_gemini_agent/: crew.py  main.py
app/research/test_ollama_agent/: README.md  pyproject.toml
app/research/test_ollama_agent/src/test_ollama_agent/: crew.py  main.py
app/static/: index.html  script.js  style.css
crewai_ollama_native/src/crewai_gemini/: crew_ai_poc_ask_gemini2_5_pro_decorator.py  test_gemini_credential.py
crewai_ollama_native/src/crewai_ollama_native/: crew.py  main.py
crewai_ollama_native/src/crewai_ollama_native/config/: agents.yaml  tasks.py
crewai_ollama_native/src/crewai_ollama_native/llm/: native_ollama_llm.py
docs/: product_requirements.md
tests/: test_api.py
~/: .bash_profile
