[project]
name = "test_gemini_agent"
version = "0.1.0"
description = "test_gemini_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
test_gemini_agent = "test_gemini_agent.main:run"
run_crew = "test_gemini_agent.main:run"
train = "test_gemini_agent.main:train"
replay = "test_gemini_agent.main:replay"
test = "test_gemini_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
